<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="daily"
            type="com.example.weatherapi.pojo.weather.DailyForecast" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/data_weather_item_tv"
                    style="@style/InformTextView"
                    android:hint="@string/data_value_str"
                    android:text="@{daily.convertData()}"/>

                <TextView
                    android:id="@+id/day_weather_item_tv"
                    style="@style/InformTextView"
                    android:text="@{daily.day.iconPhrase}"
                    android:hint="@string/overcast_str"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/temp_max_weather_item_tv"
                        style="@style/InformTextView"
                        android:text='@{daily.temperature.maximum.convertValue() + "/"}'
                        android:hint="@string/temp_value_str"
                        android:textSize="40sp" />

                    <TextView
                        android:id="@+id/temp_min_weather_item_tv"
                        style="@style/InformTextView"
                        android:text='@{String.valueOf(daily.temperature.minimum.convertValue())}'
                        android:hint="@string/temp_value_str"
                        android:textSize="30sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/temperature_celsius"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="end">

                <ImageView
                    android:id="@+id/weatherIconImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>
</layout>
